fix: wrapper hide status `z-index`

--- a/src/main.css
+++ b/src/main.css
@@ -89,6 +89,7 @@ body {
   opacity: calc(0);
   -webkit-transform: translateY(100px);
   transform: translateY(100px);
+  z-index: -1;
 }
 
 @media (prefers-color-scheme: dark) {
